Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>我們歡迎您能夠加入 LIME IME 專案團隊，協助程式的開發與測試，讓更多 Android 的使用者享受到科技帶來的好處、推廣並延續繁體中文輸入的社群。</p>
 
-<p>Github Project 網址 http://github/lime-ime <a href="http://www.limeime.org/">http://www.limeime.org/</a></p>
+<p>Github Project 網址 <a href="http://github.com/lime-ime/">http://github.com/lime-ime/</a>    <a href="http://www.limeime.org/">http://www.limeime.org/</a></p>
 
 <p>OpenFoundary <a href="http://www.openfoundry.org/of/projects/1920">http://www.openfoundry.org/of/projects/1920</a></p>
 
