Update message board

--- a/Resources/Message/content.html
+++ b/Resources/Message/content.html
@@ -1,1 +1,9 @@
-This is the tips of LIME IME for testing purpose
+
+<html>
+<head>Lime IME Message Board</head>
+<body>
+<div>
+	This is the tips of LIME IME for testing purpose
+</div>
+</body>
+</html>
