--- a/Resources/Message/content.html
+++ b/Resources/Message/content.html
@@ -7,27 +7,7 @@
 
 <div style="color:darkred;">新版本操作說明</div>
 <hr/>
-<div style="color:darkblue;">問題一 ... </div>
-<ul>
-新匯入字根時字頻會被重設，只要經過一段時間的使用，系統學習了您的選字喜好後就可讓排序變的較符合您的使用習慣。您亦可透過字根管理直接加權文字，讓它在顯示上可以排序在優先順位。
-</ul>
-<div style="color:darkblue;">問題一 ... </div>
-<ul>
-新匯入字根時字頻會被重設，只要經過一段時間的使用，系統學習了您的選字喜好後就可讓排序變的較符合您的使用習慣。您亦可透過字根管理直接加權文字，讓它在顯示上可以排序在優先順位。
-</ul>
-<div style="color:darkblue;">問題一 ... </div>
-<ul>
-新匯入字根時字頻會被重設，只要經過一段時間的使用，系統學習了您的選字喜好後就可讓排序變的較符合您的使用習慣。您亦可透過字根管理直接加權文字，讓它在顯示上可以排序在優先順位。
-</ul>
-<div style="color:darkblue;">問題一 ... </div>
-<ul>
-新匯入字根時字頻會被重設，只要經過一段時間的使用，系統學習了您的選字喜好後就可讓排序變的較符合您的使用習慣。您亦可透過字根管理直接加權文字，讓它在顯示上可以排序在優先順位。
-</ul>
-<div style="color:darkblue;">問題一 ... </div>
-<ul>
-新匯入字根時字頻會被重設，只要經過一段時間的使用，系統學習了您的選字喜好後就可讓排序變的較符合您的使用習慣。您亦可透過字根管理直接加權文字，讓它在顯示上可以排序在優先順位。
-</ul>
-<div style="color:darkblue;">問題一 ... </div>
+<div style="color:darkblue;">字根匯入排序問題</div>
 <ul>
 新匯入字根時字頻會被重設，只要經過一段時間的使用，系統學習了您的選字喜好後就可讓排序變的較符合您的使用習慣。您亦可透過字根管理直接加權文字，讓它在顯示上可以排序在優先順位。
 </ul>
